added navbar, banner & a challange part

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/1cb3c7a7ba.js" crossorigin="anonymous"></script>
 </head>
 <body class="quicksand-font ">
     <header>
@@ -54,14 +55,14 @@
                 <h4 class="curriculum-title">
                     Kinder (3-6) Years
                 </h4>
-                <p class="curriculum-description">Nurturing curiosity and creativity in early learners for a strong foundation in life</p>
+                <p class="curriculum-description">Nurturing curiosity and building a strong foundation for young learners aged 3-6 to explore, grow, and thrive.</p>
                 <button class="btn-1">Read More</button>
             </div>
             <div class="curriculum-box-2 display-flex box"> <img src="./assets/elementary.png" alt="">
                 <h4 class="curriculum-title">
                     Elementary School
                 </h4>
-                <p class="curriculum-description">Building knowledge, character, and skills for lifelong learning and success.</p>
+                <p class="curriculum-description">Fostering a love for learning, critical thinking, and teamwork to build strong foundations for future academic and personal success.</p>
                 <button class="btn-2">Read More</button></div>
             <div class="curriculum-box-3 display-flex box"> <img src="./assets/middle.png" alt="">
                 <h4 class="curriculum-title">
@@ -71,7 +72,52 @@
                 <button class="btn-3">Read More</button></div>
            </div>
          </section>
-    </main>
+         <section>
+            <div class="left-right display-flex">
+                <div class="chevron"><i class="fa-solid fa-chevron-left "></i></div>
+                <div class="chevron"><i class="fa-solid fa-chevron-right "></i></div>
+            </div>
+        </section>
+        <!-- Our Stories -->
+         <section>
+            <h3>Our Stories</h3>
+            <div class="Stories">
+                <div class="box" id="box-1">
+                    <img src="./assets/story-1.png" alt="">
+                    <h4>A fun toddler coloring training on
+                        classroom</h4>
+                    <p>Beautiful branding for changes by Never Now in Australia.
+                        changes is a platform for open discussion in an inclusive and
+                        collaborative environment, providing the...</p>
+                        <button>November 19, 2019</button>
+                </div>
+                <div class="box" id="box-2">
+                    <img src="./assets/story-2.png" alt="">
+                    <h4>Find out if a school fits the
+                        family’s needs</h4>
+                        <button>November 19, 2019</button>
+                </div>
+                <div class="box" id="box-3">
+                    <img src="./assets/story-3.png" alt="">
+                    <h4>Summer math & literacy
+                        centres for kids</h4>
+                        <button>November 19, 2019</button>
+                </div>
+                <div class="box" id="box-4">
+                    <img src="./assets/story-4.png" alt="">
+                    <h4>Classroom management
+                        techniques for new tutors</h4>
+                        <button>November 19, 2019</button>
+                </div>
+                <div class="box" id="box-5">
+                    <img src="./assets/story-5.png" alt="">
+                    <h4>Conversation rhymes
+                        improve kids listening</h4>
+                        <button>November 19, 2019</button>
+                </div>
+            </div>
+         </section>
+        </main>
     <footer>
 
     </footer>
