--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 Standard Curriculum
             </h3>
            <div class="display-flex curriculum-box-container">
-            <div class="curriculum-box-1 display-flex box">
+            <div class="curriculum-box-1 display-flex box-001">
                 <img src="./assets/kinder.png" alt="">
                 <h4 class="curriculum-title">
                     Kinder (3-6) Years
@@ -58,13 +58,13 @@
                 <p class="curriculum-description">Nurturing curiosity and building a strong foundation for young learners aged 3-6 to explore, grow, and thrive.</p>
                 <button class="btn-1">Read More</button>
             </div>
-            <div class="curriculum-box-2 display-flex box"> <img src="./assets/elementary.png" alt="">
+            <div class="curriculum-box-2 display-flex box-001"> <img src="./assets/elementary.png" alt="">
                 <h4 class="curriculum-title">
                     Elementary School
                 </h4>
                 <p class="curriculum-description">Fostering a love for learning, critical thinking, and teamwork to build strong foundations for future academic and personal success.</p>
                 <button class="btn-2">Read More</button></div>
-            <div class="curriculum-box-3 display-flex box"> <img src="./assets/middle.png" alt="">
+            <div class="curriculum-box-3 display-flex box-001"> <img src="./assets/middle.png" alt="">
                 <h4 class="curriculum-title">
                     Middle (10-16) Years
                 </h4>
@@ -79,47 +79,75 @@
             </div>
         </section>
         <!-- Our Stories -->
-         <section>
-            <h3>Our Stories</h3>
-            <div class="Stories">
-                <div class="box" id="box-1">
-                    <img src="./assets/story-1.png" alt="">
-                    <h4>A fun toddler coloring training on
-                        classroom</h4>
-                    <p>Beautiful branding for changes by Never Now in Australia.
-                        changes is a platform for open discussion in an inclusive and
-                        collaborative environment, providing the...</p>
-                        <button>November 19, 2019</button>
+         <section class="stories display-flex">
+            <h3 class="story-title">Our Stories</h3>
+            <div class="Stories display-flex">
+                <div class="box-1-container">
+                    <div class="box-big" id="box-1">
+                        <img src="./assets/story-1.png" alt="">
+                        <button class="box-btn-1">November 19, 2019</button>
+                        <h4 class="box-1-title">A fun toddler coloring training on <br>
+                            classroom</h4>
+                        <p class="box-1-description">Beautiful branding for changes by Never Now in Australia.
+                            changes is a platform for open discussion in an inclusive and
+                            collaborative environment, providing the...</p>
+                            <!-- <button class="box-btn-1">November 19, 2019</button> -->
+                    </div>
                 </div>
-                <div class="box" id="box-2">
-                    <img src="./assets/story-2.png" alt="">
-                    <h4>Find out if a school fits the
-                        family’s needs</h4>
-                        <button>November 19, 2019</button>
-                </div>
-                <div class="box" id="box-3">
-                    <img src="./assets/story-3.png" alt="">
-                    <h4>Summer math & literacy
-                        centres for kids</h4>
-                        <button>November 19, 2019</button>
-                </div>
-                <div class="box" id="box-4">
-                    <img src="./assets/story-4.png" alt="">
-                    <h4>Classroom management
-                        techniques for new tutors</h4>
-                        <button>November 19, 2019</button>
-                </div>
-                <div class="box" id="box-5">
-                    <img src="./assets/story-5.png" alt="">
-                    <h4>Conversation rhymes
-                        improve kids listening</h4>
-                        <button>November 19, 2019</button>
+                <div class="box-2-5-container">
+                    <div class="box" id="box-2">
+                        <img src="./assets/story-2.png" alt="">
+                        <button class="btn btn-01">November 19, 2019</button>
+
+                        <h4 class="story-title-1">Find out if a school fits the
+                            family’s needs</h4>
+                    </div>
+                    <div class="box" id="box-3">
+                        <img src="./assets/story-3.png" alt="">
+                        <button class="btn btn-02">November 19, 2019</button>
+                        <h4 class="story-title-1">Summer math & literacy
+                            centres for kids</h4>
+                    </div>
+                    <div class="box" id="box-4">
+                        <img src="./assets/story-4.png" alt="">
+                        <button class="btn btn-03">November 19, 2019</button>
+                        <h4 class="story-title-1">Classroom management
+                            techniques for new tutors</h4>
+                            <!-- <button>November 19, 2019</button> -->
+                    </div>
+                    <div class="box" id="box-5">
+                        <img src="./assets/story-5.png" alt="">
+                        <button class="btn btn-04">November 19, 2019</button>
+                        <h4 class="story-title-1">Conversation rhymes
+                            improve kids listening</h4>
+                            <!-- <button>November 19, 2019</button> -->
+                    </div>
                 </div>
             </div>
          </section>
         </main>
-    <footer>
-
+    <footer class="footer-bg">
+        <div class="footer-box display-flex">
+            <div class="f-box-1 display-flex">
+                <img src="./assets/logo.png" alt="">
+                <h1>Kids <br>
+                    Education</h1>
+            </div>
+            <div class="f-box-2">
+                <h4>About School</h4>
+                <span><a href="">Home</a></span>
+                <span><a href="">About</a></span>
+                <span><a href="">Facilities</a></span>
+                <span><a href="">Admission</a></span>
+                <!-- <span><a href=""></a></span> -->
+            </div>
+            <div class="f-box-3">
+                <h3>Keep In Touch</h3>
+                <div class="logo-link">
+                    
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
