added last part of code

--- a/index.html
+++ b/index.html
@@ -97,27 +97,27 @@
                 <div class="box-2-5-container">
                     <div class="box" id="box-2">
                         <img src="./assets/story-2.png" alt="">
-                        <button class="btn btn-01">November 19, 2019</button>
+                       <p class="btn btn-01">November 19, 2019</p>
 
                         <h4 class="story-title-1">Find out if a school fits the
                             family’s needs</h4>
                     </div>
                     <div class="box" id="box-3">
                         <img src="./assets/story-3.png" alt="">
-                        <button class="btn btn-02">November 19, 2019</button>
+                       <p class="btn btn-02">November 19, 2019</p>
                         <h4 class="story-title-1">Summer math & literacy
                             centres for kids</h4>
                     </div>
                     <div class="box" id="box-4">
                         <img src="./assets/story-4.png" alt="">
-                        <button class="btn btn-03">November 19, 2019</button>
+                        <p class="btn btn-03">November 19, 2019</p>
                         <h4 class="story-title-1">Classroom management
                             techniques for new tutors</h4>
                             <!-- <button>November 19, 2019</button> -->
                     </div>
                     <div class="box" id="box-5">
                         <img src="./assets/story-5.png" alt="">
-                        <button class="btn btn-04">November 19, 2019</button>
+                       <p class="btn btn-04">November 19, 2019</p>
                         <h4 class="story-title-1">Conversation rhymes
                             improve kids listening</h4>
                             <!-- <button>November 19, 2019</button> -->
@@ -126,15 +126,23 @@
             </div>
          </section>
         </main>
-    <footer class="footer-bg">
+    <footer class="footer-bg display-flex">
         <div class="footer-box display-flex">
-            <div class="f-box-1 display-flex">
-                <img src="./assets/logo.png" alt="">
-                <h1>Kids <br>
-                    Education</h1>
+            <div>
+                <div class="f-box-1 display-flex">
+                    <img src="./assets/bag-footer-removebg-preview.png" alt="">
+                    <h1 class="footer-title">Kids <br>
+                        Education</h1>
+                        
+                </div>
+                <p class="footer-des">
+                    Unlocking the potential of every child through engaging <br>learning experiences.  
+                    Nurturing curiosity,<br> creativity, and confidence from an  early age.  
+                    Building <br> strong foundations for a brighter future.
+                </p>
             </div>
             <div class="f-box-2">
-                <h4>About School</h4>
+                <h4 class="About-school">About School</h4>
                 <span><a href="">Home</a></span>
                 <span><a href="">About</a></span>
                 <span><a href="">Facilities</a></span>
@@ -142,9 +150,12 @@
                 <!-- <span><a href=""></a></span> -->
             </div>
             <div class="f-box-3">
-                <h3>Keep In Touch</h3>
+                <h2 class="About-school">Keep In Touch</h2>
                 <div class="logo-link">
-                    
+                    <a href=""><img src="./assets/fb.png" alt=""></a>
+                    <a href=""><img src="./assets/dribble.png" alt=""></a>
+                    <a href=""><img src="./assets/twitter.png" alt=""></a>
+                    <a href=""><img src="./assets/google+.png" alt=""></a>
                 </div>
             </div>
         </div>
