fixed a simple issu

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="for-mobile-01">
             <div class="for-mobile display-flex">
                 <div class="logo-f-p">
-                    <img src="./assets/logo.png" alt="">
+                    <img class="img-m" src="./assets/logo.png" alt="">
                 </div>
                 <div class="humburger">
                     <i class="fa-solid fa-bars" style="font-size:45px"></i>
