add responsive part

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
              
             </div>
-            <hr style="border: 1px solid orange; margin-left: 0px;">
+            <hr style="border: 1px solid orange; margin-left: 0px; padding-left: 0px; margin-right: 0px;padding-right: 0px;">
         </div>
         <!-- banner section -->
          <section class="banner display-flex">
@@ -52,7 +52,7 @@
                     <button class="btn-secondary">Enroll Now</button>
             </div>
             <div class="banner-img">
-                <img src="./assets/hero-kids.png" alt="">
+                <img class="b-img" src="./assets/hero-kids.png" alt="">
             </div>
          </section>
     </header>
@@ -109,27 +109,27 @@
                 </div>
                 <div class="box-2-5-container">
                     <div class="box" id="box-2">
-                        <img src="./assets/story-2.png" alt="">
+                        <img class="box-img-s" src="./assets/story-2.png" alt="">
                        <p class="btn btn-01">November 19, 2019</p>
 
                         <h4 class="story-title-1">Find out if a school fits the
                             family’s needs</h4>
                     </div>
                     <div class="box" id="box-3">
-                        <img src="./assets/story-3.png" alt="">
+                        <img class="box-img-s" src="./assets/story-3.png" alt="">
                        <p class="btn btn-02">November 19, 2019</p>
                         <h4 class="story-title-1">Summer math & literacy
                             centres for kids</h4>
                     </div>
                     <div class="box" id="box-4">
-                        <img src="./assets/story-4.png" alt="">
+                        <img class="box-img-s" src="./assets/story-4.png" alt="">
                         <p class="btn btn-03">November 19, 2019</p>
                         <h4 class="story-title-1">Classroom management
                             techniques for new tutors</h4>
                             <!-- <button>November 19, 2019</button> -->
                     </div>
                     <div class="box" id="box-5">
-                        <img src="./assets/story-5.png" alt="">
+                        <img class="box-img-s" src="./assets/story-5.png" alt="">
                        <p class="btn btn-04">November 19, 2019</p>
                         <h4 class="story-title-1">Conversation rhymes
                             improve kids listening</h4>
