--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body class="quicksand-font ">
     <header>
+        <marquee style="color:orange; font-weight: 600;" behavior="" direction="">Admission Going On</marquee>
         <nav class="navbar display-flex">
             <div class="logo-name display-flex">
                 <img src="./assets/logo.png" alt="">
