add hover effect

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                
             </div>
             <div class="nav-btn">
-                <button class="btn-primary">Contact</button>
+                <button style="color: white;" class="btn-primary">Contact</button>
             </div>
         </nav>
         <div class="for-mobile-01">
